uipath-commons/main/default/objects/Account/fields/Closed_Ops_1st_Parent__c.field-meta.xml
<CustomField>
    <fullName>Closed_Ops_1st_Parent__c</fullName>
    <label>Closed Ops 1st Parent</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>