uipath-commons/main/default/objects/Account/fields/CoE__c.field-meta.xml
<CustomField>
        <fullName>CoE__c</fullName>
        <label>CoE</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </CustomField>