uipath-commons/main/default/objects/Account/fields/Company_Rankings__c.field-meta.xml
<CustomField>
    <fullName>Company_Rankings__c</fullName>
    <label>Company Rankings</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Forbes 2000</fullName>
            </value>
            <value>
                <fullName>Fortune 1000 Rank</fullName>
            </value>
            <value>
                <fullName>Global Fortune 500</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>