uipath-commons/main/default/objects/Account/fields/Company_Tier__c.field-meta.xml
<CustomField>
    <fullName>Company_Tier__c</fullName>
    <label>Company Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>