uipath-commons/main/default/objects/Account/fields/Company_Type__c.field-meta.xml
<CustomField>
    <fullName>Company_Type__c</fullName>
    <description>Populated from Hoovers</description>
    <inlineHelpText>Populated from Hoovers</inlineHelpText>
    <label>Company Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>