uipath-commons/main/default/objects/Account/fields/Competition__c.field-meta.xml
<CustomField>
    <fullName>Competition__c</fullName>
    <description>Based on closed opportunities</description>
    <inlineHelpText>Based on closed opportunities</inlineHelpText>
    <label>Competition</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>