uipath-commons/main/default/objects/Account/fields/Component_URL__c.field-meta.xml
<CustomField>
        <fullName>Component_URL__c</fullName>
        <description>UiPath Go Component URL</description>
        <label>Component URL</label>
        <type>Url</type>
    </CustomField>