uipath-commons/main/default/objects/Account/fields/Contract_Duration__c.field-meta.xml
<CustomField>
        <fullName>Contract_Duration__c</fullName>
        <formula>IF(NOT(ISBLANK( Contract_End_Date__c )) &amp;&amp; NOT(ISBLANK( Contract_Start_Date__c )),(((YEAR(Contract_End_Date__c) - YEAR(Contract_Start_Date__c  ) - 1) *12) + (12 - MONTH(Contract_Start_Date__c  )) + MONTH(Contract_End_Date__c)), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated in months</inlineHelpText>
        <label>Contract Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>