uipath-commons/main/default/objects/Account/fields/Contract_End_Date_renewal__c.field-meta.xml
<CustomField>
        <fullName>Contract_End_Date_renewal__c</fullName>
        <label>Contract End Date (renewal)</label>
        <type>Date</type>
    </CustomField>