uipath-commons/main/default/objects/Account/fields/Contract_Start_Date__c.field-meta.xml
<CustomField>
        <fullName>Contract_Start_Date__c</fullName>
        <label>Contract Start Date</label>
        <type>Date</type>
    </CustomField>