uipath-commons/main/default/objects/Account/fields/Contract_value__c.field-meta.xml
<CustomField>
    <fullName>Contract_value__c</fullName>
    <label>Contract value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>