uipath-commons/main/default/objects/Account/fields/Corporate_Family_Won_Oportunities__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Family_Won_Oportunities__c</fullName>
    <formula>if(won_opportunities__c &gt;=1,true,
if(Closed_Ops_1st_Parent__c &gt;=1,true,
if(Closed_Opps_2nd_Parent__c  &gt;=1, true ,
if(Closed_Opps_3rd_Parent__c &gt;=1, true ,
if(Closed_Opps_4th_Parent__c &gt;=1, true ,
if(Closed_Opps_5th_Parent__c  &gt;=1, true ,
false)
)
))))</formula>
    <label>Corporate Family Won Oportunities</label>
    <type>Checkbox</type>
</CustomField>