uipath-commons/main/default/objects/Account/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>This required field will be used to capture the country on the creation of a new account. It will populate the country on the new address records for accounts. The standard billing and shipping address fields on account will be made read only.</description>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country_Global_List</valueSetName>
    </valueSet>
</CustomField>