uipath-commons/main/default/objects/Account/fields/Courier__c.field-meta.xml
<CustomField>
        <fullName>Courier__c</fullName>
        <inlineHelpText>Used for invoicing</inlineHelpText>
        <label>Courier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>