uipath-commons/main/default/objects/Account/fields/CP_Company_Logo__c.field-meta.xml
<CustomField>
        <fullName>CP_Company_Logo__c</fullName>
        <description>Used to store company logo from customer portal</description>
        <inlineHelpText>Used to store company logo from customer portal</inlineHelpText>
        <label>CP Company Logo</label>
        <length>32768</length>
        <type>Html</type>
    </CustomField>