uipath-commons/main/default/objects/Account/fields/Created_by_lead_convert__c.field-meta.xml
<CustomField>
        <fullName>Created_by_lead_convert__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Shows accounts created by lead convert
SLTECH-465</description>
        <inlineHelpText>Shows accounts created by lead convert</inlineHelpText>
        <label>Created by lead convert</label>
        <type>Checkbox</type>
    </CustomField>