uipath-commons/main/default/objects/Account/fields/Credit_Exposure__c.field-meta.xml
<CustomField>
    <fullName>Credit_Exposure__c</fullName>
    <description>Used with NetSuite Integration</description>
    <label>Credit Exposure</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>