uipath-commons/main/default/objects/Account/fields/Credit_Hold__c.field-meta.xml
<CustomField>
        <fullName>Credit_Hold__c</fullName>
        <label>Credit Hold</label>
        <length>200</length>
        <type>Text</type>
    </CustomField>