uipath-commons/main/default/objects/Account/fields/Credit_Hold_Reason__c.field-meta.xml
<CustomField>
    <fullName>Credit_Hold_Reason__c</fullName>
    <description>SLTECH-8332</description>
    <label>Credit Hold Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>