uipath-commons/main/default/objects/Account/fields/Credit_Limit__c.field-meta.xml
<CustomField>
        <fullName>Credit_Limit__c</fullName>
        <label>Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </CustomField>