uipath-commons/main/default/objects/Account/fields/CSAT__c.field-meta.xml
<CustomField>
        <fullName>CSAT__c</fullName>
        <label>CSAT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </CustomField>