uipath-commons/main/default/objects/Account/fields/CSAT_Technical_Support__c.field-meta.xml
<CustomField>
    <fullName>CSAT_Technical_Support__c</fullName>
    <label>CSAT – Technical Support</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>