uipath-commons/main/default/objects/Account/fields/CSD__c.field-meta.xml
<CustomField>
        <fullName>CSD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Only for Customer Success Directors</inlineHelpText>
        <label>CSD</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>equals</operation>
                <value>Customer Success, Japan Customer Success</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>CSD</relationshipName>
        <type>Lookup</type>
    </CustomField>