uipath-commons/main/default/objects/Account/fields/CSM__c.field-meta.xml
<CustomField>
        <fullName>CSM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Client Success Manager</description>
        <inlineHelpText>Select the Client Success Manager for this account</inlineHelpText>
        <label>CSM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </CustomField>