uipath-commons/main/default/objects/Account/fields/CSM_Criteria_Comments__c.field-meta.xml
<CustomField>
        <fullName>CSM_Criteria_Comments__c</fullName>
        <label>CSM Criteria Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>