uipath-commons/main/default/objects/Account/fields/Custom_SOW__c.field-meta.xml
<CustomField>
        <fullName>Custom_SOW__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Did the MSA specify a custom SOW template that must be used?</description>
        <label>Custom SOW</label>
        <type>Checkbox</type>
    </CustomField>