uipath-commons/main/default/objects/Account/fields/Customer_Notifications_requirements__c.field-meta.xml
<CustomField>
    <fullName>Customer_Notifications_requirements__c</fullName>
    <label>Customer Notification Requirements</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A SUSPECTED data breach or security incident (non confirmed breaches)</fullName>
            </value>
            <value>
                <fullName>A possible/future sub-processor (in procurement phase)</fullName>
            </value>
            <value>
                <fullName>Automatic deletion of customer data</fullName>
            </value>
            <value>
                <fullName>Critical product vulnerabilities</fullName>
            </value>
            <value>
                <fullName>High product vulnerabilities</fullName>
            </value>
            <value>
                <fullName>Medium product vulnerabilities</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>