uipath-commons/main/default/objects/Account/fields/Customer_Objectives__c.field-meta.xml
<CustomField>
    <fullName>Customer_Objectives__c</fullName>
    <label>Customer Objectives</label>
    <length>131000</length>
    <type>Html</type>
</CustomField>