uipath-commons/main/default/objects/Account/fields/Customer_overview__c.field-meta.xml
<CustomField>
    <fullName>Customer_overview__c</fullName>
    <label>Customer overview</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>