uipath-commons/main/default/objects/Account/fields/Customer_Reference_Definitions__c.field-meta.xml
<CustomField>
        <fullName>Customer_Reference_Definitions__c</fullName>
        <label>Customer Reference Definitions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Is Referenceable</fullName>
                </value>
                <value>
                    <fullName>Willing to do a case study</fullName>
                </value>
                <value>
                    <fullName>Willing to provide a quote</fullName>
                </value>
                <value>
                    <fullName>Agreed to using their logo</fullName>
                </value>
                <value>
                    <fullName>Agreed to filming testimonial</fullName>
                </value>
                <value>
                    <fullName>Is Press Ready</fullName>
                </value>
                <value>
                    <fullName>Willing to talk to a customer privately</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>