uipath-commons/main/default/objects/Account/fields/Customer_Stage__c.field-meta.xml
<CustomField>
        <fullName>Customer_Stage__c</fullName>
        <label>Customer Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prove</fullName>
                </value>
                <value>
                    <fullName>Conversion</fullName>
                </value>
                <value>
                    <fullName>Establish</fullName>
                </value>
                <value>
                    <fullName>Expand</fullName>
                </value>
                <value>
                    <fullName>Scale</fullName>
                </value>
                <value>
                    <fullName>1Robot for everyone</fullName>
                    <isActive>false</isActive>
                    <label>1Robot for everyone</label>
                </value>
                <value>
                    <fullName>Scale Ups</fullName>
                    <isActive>false</isActive>
                    <label>Scale Ups</label>
                </value>
                <value>
                    <fullName>Stagnating</fullName>
                    <isActive>false</isActive>
                    <label>Stagnating</label>
                </value>
                <value>
                    <fullName>Struggling to scale</fullName>
                    <isActive>false</isActive>
                    <label>Struggling to scale</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>