uipath-commons/main/default/objects/Account/fields/Customer_Stage_Score__c.field-meta.xml
<CustomField>
        <fullName>Customer_Stage_Score__c</fullName>
        <formula>IF(OR(TEXT(Customer_Stage__c) = &quot;Prove&quot;,TEXT(Customer_Stage__c) = &quot;Scale&quot;),8,
IF(TEXT(Customer_Stage__c) = &quot;Establish&quot;,9,10))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Stage Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>