uipath-commons/main/default/objects/Account/fields/Customers__c.field-meta.xml
<CustomField>
        <fullName>Customers__c</fullName>
        <inlineHelpText>Name Key and Strategic accounts</inlineHelpText>
        <label>Customers</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>