uipath-commons/main/default/objects/Account/fields/Customers_Definition_for_Automation__c.field-meta.xml
<CustomField>
        <fullName>Customers_Definition_for_Automation__c</fullName>
        <label>Customer&#39;s Definition for Automation</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </CustomField>