uipath-commons/main/default/objects/Account/fields/D_B_Zip_Code__c.field-meta.xml
<CustomField>
        <fullName>D_B_Zip_Code__c</fullName>
        <label>D&amp;B Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>