uipath-commons/main/default/objects/Account/fields/D_B_Zip_Code_Trimmed__c.field-meta.xml
<CustomField>
    <fullName>D_B_Zip_Code_Trimmed__c</fullName>
    <formula>IF(BillingCountry = &quot;United States&quot;,TRIM(LEFT(D_B_Zip_Code__c,5)), D_B_Zip_Code__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>D&amp;B Zip Code Trimmed</label>
    <type>Text</type>
</CustomField>