uipath-commons/main/default/objects/Account/fields/Data_Steward_Comments__c.field-meta.xml
<CustomField>
    <fullName>Data_Steward_Comments__c</fullName>
    <label>Data Steward Comments</label>
    <type>TextArea</type>
</CustomField>