uipath-commons/main/default/objects/Account/fields/Date_Joined_Program__c.field-meta.xml
<CustomField>
    <fullName>Date_Joined_Program__c</fullName>
    <description>Date the business partner signed UiPath&#39;s partner program agreement</description>
    <inlineHelpText>Date the business partner signed UiPath&#39;s partner program agreement</inlineHelpText>
    <label>Date Joined Program</label>
    
        <type>Date</type>
</CustomField>