uipath-commons/main/default/objects/Account/fields/Date_of_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Transfer__c</fullName>
    <description>The date when the account has been transferred from previous account owner</description>
    <label>Date of Transfer</label>
    <type>Date</type>
</CustomField>