uipath-commons/main/default/objects/Account/fields/Date_Terminated_Program__c.field-meta.xml
<CustomField>
    <fullName>Date_Terminated_Program__c</fullName>
    <description>Date partner was terminated from UiPath&#39;s business partner program</description>
    <inlineHelpText>Date partner was terminated from UiPath&#39;s business partner program</inlineHelpText>
    <label>Date Terminated Program</label>
    <type>Date</type>
</CustomField>