uipath-commons/main/default/objects/Account/fields/Default_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Default_Payment_Terms__c</fullName>
    <label>Default Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SBQQ__PaymentTerm</valueSetName>
    </valueSet>
</CustomField>