uipath-commons/main/default/objects/Account/fields/DnB_Country__c.field-meta.xml
<CustomField>
        <fullName>DnB_Country__c</fullName>
        <label>DnB Country</label>
        <length>50</length>
        <type>Text</type>
    </CustomField>