uipath-commons/main/default/objects/Account/fields/DnB_State_Province__c.field-meta.xml
<CustomField>
    <fullName>DnB_State_Province__c</fullName>
    <label>DnB State/Province</label>
    <length>50</length>
    <type>Text</type>
</CustomField>