uipath-commons/main/default/objects/Account/fields/DnB_Street__c.field-meta.xml
<CustomField>
        <fullName>DnB_Street__c</fullName>
        <description>D&amp;B address will be synced to custom D&amp;B address fields on account. From there, they can be synced to the address object. These fields are hidden and used in the background for syncing logic.</description>
        <label>DnB Street</label>
        <type>TextArea</type>
    </CustomField>