uipath-commons/main/default/objects/Account/fields/DnB_Zip_Postal_Code__c.field-meta.xml
<CustomField>
        <fullName>DnB_Zip_Postal_Code__c</fullName>
        <description>D&amp;B address will be synced to custom D&amp;B address fields on account. From there, they can be synced to the address object. These fields are hidden and used in the background for syncing logic.</description>
        <label>DnB Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </CustomField>