uipath-commons/main/default/objects/Account/fields/Domain__c.field-meta.xml
<CustomField>
        <fullName>Domain__c</fullName>
        <label>Domain</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>