uipath-commons/main/default/objects/Account/fields/Domain_Formula__c.field-meta.xml
<CustomField>
        <fullName>Domain_Formula__c</fullName>
        <formula>SUBSTITUTE(Website, LEFT(Website, FIND(&quot;.&quot;, Website)), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Domain Formula</label>
        <type>Text</type>
    </CustomField>