uipath-commons/main/default/objects/Account/fields/Domain_Portal__c.field-meta.xml
<CustomField>
    <fullName>Domain_Portal__c</fullName>
    <inlineHelpText>This domain field is used for partner portal access verification. Separate multiple domains with comma.</inlineHelpText>
    <label>Domain (Portal)</label>
    <length>150</length>
    <type>Text</type>
</CustomField>