uipath-commons/main/default/objects/Account/fields/EDR__c.field-meta.xml
<CustomField>
        <fullName>EDR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Enterprise Development Rep supporting this Account</description>
        <inlineHelpText>Enterprise Development Rep supporting this Account</inlineHelpText>
        <label>EDR</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts7</relationshipName>
        <type>Lookup</type>
    </CustomField>