uipath-commons/main/default/objects/Account/fields/Eligible_for_Premium_Care__c.field-meta.xml
<CustomField>
        <fullName>Eligible_for_Premium_Care__c</fullName>
        <formula>if( Annual_Contract_Value__c &gt;= 75000, &quot;Yes&quot;,&quot;No&quot;)</formula>
        <label>Eligible for Premium Care</label>
        <type>Text</type>
    </CustomField>