uipath-commons/main/default/objects/Account/fields/Email_Domain__c.field-meta.xml
<CustomField>
        <fullName>Email_Domain__c</fullName>
        <label>Email Domain</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>