uipath-commons/main/default/objects/Account/fields/Email_Domain_Disabled__c.field-meta.xml
<CustomField>
    <fullName>Email_Domain_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Domain Disabled</label>
    <type>Checkbox</type>
</CustomField>