uipath-commons/main/default/objects/Account/fields/Employee_ISP__c.field-meta.xml
<CustomField>
        <fullName>Employee_ISP__c</fullName>
        <formula>NumberOfEmployees</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee (ISP)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>