uipath-commons/main/default/objects/Account/fields/Employees_per_Group__c.field-meta.xml
<CustomField>
        <fullName>Employees_per_Group__c</fullName>
        <label>Employees per Group</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>