uipath-commons/main/default/objects/Account/fields/Employees_Score__c.field-meta.xml
<CustomField>
    <fullName>Employees_Score__c</fullName>
    <formula>IF(NumberOfEmployees &lt; 10000, 2, IF(AND(NumberOfEmployees &lt; 20000,NumberOfEmployees &gt; 10000), 4, IF(AND(NumberOfEmployees &lt; 50000,NumberOfEmployees &gt; 20000), 7, 10)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employees Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>