uipath-commons/main/default/objects/Account/fields/Enrich__c.field-meta.xml
<CustomField>
    <fullName>Enrich__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Users to mark the need for enrichment</description>
    <inlineHelpText>Please mark the record if it needs enrichment</inlineHelpText>
    <label>Enrich</label>
    <type>Checkbox</type>
</CustomField>