uipath-commons/main/default/objects/Account/fields/Events_Conducted__c.field-meta.xml
<CustomField>
    <fullName>Events_Conducted__c</fullName>
    <label>Events Conducted</label>
    <length>255</length>
    <type>Text</type>
</CustomField>