uipath-commons/main/default/objects/Account/fields/Exclude_from_Statistics__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_Statistics__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude from Statistics</label>
    <type>Checkbox</type>
</CustomField>