uipath-commons/main/default/objects/Account/fields/Executive_Account_Sponsor__c.field-meta.xml
<CustomField>
        <fullName>Executive_Account_Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Specifies the UiPath Executive Sponsor for an Account.</description>
        <inlineHelpText>Specify a UiPath Executive Sponsor for your Account as appropriate and/or needed.</inlineHelpText>
        <label>Executive Account Sponsor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </CustomField>