uipath-commons/main/default/objects/Account/fields/Export_control_pass__c.field-meta.xml
<CustomField>
        <fullName>Export_control_pass__c</fullName>
        <label>Export control pass</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>