uipath-commons/main/default/objects/Account/fields/Export_Control_Status__c.field-meta.xml
<CustomField>
        <fullName>Export_Control_Status__c</fullName>
        <label>Export Control Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Clean</fullName>
                </value>
                <value>
                    <fullName>Suspect</fullName>
                </value>
                <value>
                    <fullName>Suspect Parent</fullName>
                </value>
                <value>
                    <fullName>Restricted</fullName>
                </value>
                <value>
                    <fullName>Excepted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>