uipath-commons/main/default/objects/Account/fields/Federal_Addendum__c.field-meta.xml
<CustomField>
    <fullName>Federal_Addendum__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Federal Addendum</label>
    <type>Checkbox</type>
</CustomField>