uipath-commons/main/default/objects/Account/fields/Fiscal_Year_End__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year_End__c</fullName>
    <description>Fiscal year end from D&amp;B</description>
    <inlineHelpText>Fiscal year end from D&amp;B</inlineHelpText>
    <label>Fiscal Year End</label>
    <type>Date</type>
</CustomField>