uipath-commons/main/default/objects/Account/fields/Focus_Partner__c.field-meta.xml
<CustomField>
    <fullName>Focus_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Focus Partner</label>
    <type>Checkbox</type>
</CustomField>