uipath-commons/main/default/objects/Account/fields/for_mass_update__c.field-meta.xml
<CustomField>
    <fullName>for_mass_update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>for mass update</label>
    <type>Checkbox</type>
</CustomField>