uipath-commons/main/default/objects/Account/fields/Fortune_1000_Rank__c.field-meta.xml
<CustomField>
        <fullName>Fortune_1000_Rank__c</fullName>
        <description>Shows Fortune 1000 rank from D&amp;B</description>
        <inlineHelpText>Shows Fortune 1000 rank from D&amp;B</inlineHelpText>
        <label>Fortune 1000 Rank</label>
        <length>50</length>
        <type>Text</type>
    </CustomField>