uipath-commons/main/default/objects/Account/fields/GAM__c.field-meta.xml
<CustomField>
    <fullName>GAM__c</fullName>
    <formula>IF(text( Classification__c ) = &quot;Global&quot; &amp;&amp; NOT(ISBLANK(Parent.Parent.Parent.Parent.Parent.Name)), Parent.Parent.Parent.Parent.Parent.Owner.Full_Name__c, 
IF(text( Classification__c ) = &quot;Global&quot; &amp;&amp;NOT(ISBLANK(Parent.Parent.Parent.Parent.Name)), Parent.Parent.Parent.Parent.Owner.Full_Name__c, 
IF(text( Classification__c ) = &quot;Global&quot; &amp;&amp;NOT(ISBLANK(Parent.Parent.Parent.Name)), Parent.Parent.Parent.Owner.Full_Name__c, 
IF(text( Classification__c ) = &quot;Global&quot; &amp;&amp;NOT(ISBLANK(Parent.Parent.Name)), Parent.Parent.Owner.Full_Name__c, 
IF(text( Classification__c ) = &quot;Global&quot; &amp;&amp;NOT(ISBLANK(Parent.Name)),Parent.Owner.Full_Name__c,
IF(text( Classification__c ) = &quot;Global&quot; &amp;&amp;ISBLANK(Parent.Name),Owner.Full_Name__c,
null))))))</formula>
    <label>GAM</label>
    <type>Text</type>
</CustomField>