uipath-commons/main/default/objects/Account/fields/GAM_deprecated__c.field-meta.xml
<CustomField>
        <fullName>GAM_deprecated__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GAM (deprecated)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GAM</relationshipName>
        <type>Lookup</type>
    </CustomField>