uipath-commons/main/default/objects/Account/fields/GAM_Email__c.field-meta.xml
<CustomField>
        <fullName>GAM_Email__c</fullName>
        <label>GAM Email</label>
        <type>Email</type>
    </CustomField>