uipath-commons/main/default/objects/Account/fields/GAM_Id__c.field-meta.xml
<CustomField>
        <fullName>GAM_Id__c</fullName>
        <formula>IF(text( Classification__c ) = &quot;Global&quot; &amp;&amp; NOT(ISBLANK(Parent.Parent.Parent.Parent.Parent.Name)), Parent.Parent.Parent.Parent.Parent.Owner.Id,
IF(text( Classification__c ) = &quot;Global&quot; &amp;&amp;NOT(ISBLANK(Parent.Parent.Parent.Parent.Name)), Parent.Parent.Parent.Parent.Owner.Id,
IF(text( Classification__c ) = &quot;Global&quot; &amp;&amp;NOT(ISBLANK(Parent.Parent.Parent.Name)), Parent.Parent.Parent.Owner.Id,
IF(text( Classification__c ) = &quot;Global&quot; &amp;&amp;NOT(ISBLANK(Parent.Parent.Name)), Parent.Parent.Owner.Id,
IF(text( Classification__c ) = &quot;Global&quot; &amp;&amp;NOT(ISBLANK(Parent.Name)),Parent.Owner.Id,
IF(text( Classification__c ) = &quot;Global&quot; &amp;&amp;ISBLANK(Parent.Name),Owner.Id,
null))))))</formula>
        <label>GAM ID</label>
        <type>Text</type>
    </CustomField>