uipath-commons/main/default/objects/Account/fields/GAM_Lookup__c.field-meta.xml
<CustomField>
        <fullName>GAM_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GAM Lookup</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GAM_Lookup</relationshipName>
        <type>Lookup</type>
    </CustomField>